<?xml version="1.0" encoding="utf-8"?>
<resources>
    <!-- App Name -->
    <string name="app_name">My Contacts</string>

    <!-- General -->
    <string name="cancel">Cancel</string>
    <string name="save">Save</string>
    <string name="edit">Edit</string>
    <string name="delete">Delete</string>
    <string name="done">Done</string>

    <!-- MainActivity -->
    <string name="contacts">Contacts</string>
    <string name="search_contacts">Search contacts</string>
    <string name="add_contact">Add Contact</string>
    <string name="no_contacts">No Contacts</string>
    <string name="no_contacts_message">Add a contact to get started</string>

    <!-- Contact Fields -->
    <string name="first_name">First Name</string>
    <string name="last_name">Last Name</string>
    <string name="phone">Phone</string>
    <string name="email">Email</string>
    <string name="url">URL</string>
    <string name="address">Address</string>
    <string name="birthday">Birthday</string>
    <string name="notes">Notes</string>
    <string name="favorite">Favorite</string>

    <!-- AddEditContactActivity -->
    <string name="new_contact">New Contact</string>
    <string name="edit_contact">Edit Contact</string>
    <string name="add_photo">Add Photo</string>

    <!-- ContactDetailsActivity -->
    <string name="call">Call</string>
    <string name="message">Message</string>
    <string name="delete_contact">Delete Contact</string>

    <!-- Messages -->
    <string name="contact_added">Contact added</string>
    <string name="contact_updated">Contact updated</string>
    <string name="contact_deleted">Contact deleted</string>
    <string name="error_loading">Error loading contact</string>
</resources>